5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1582_1559.log
== SUBMITION (2019-03-29 13:19:43) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(fras.upper)
-- EXECUTION TIME:
0.145811
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(fras.upper)
NameError: name 'fras' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:19:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- EXECUTION TIME:
0.132213
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f91e2bb04a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:20:13) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f913d3879f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 13:20:26) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 13:20:32) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.160436
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
